# reactive-bb-backend

./: .gitignore  INSTALLATION_FREEBSD.MD  LICENSE  README.md  admincp.py  install.py  log.json  main.py  modcp.py  nginx.sample.conf  nginx_https.conf  pyproject.toml  start.py  supervisord.conf  uninstall.py
.github/workflows/: test.yml
api/: app.py  engine.py  graphql_handler.py  read_config.py  schema.graphql  schema.py
api/auth/: auth.py  crypto.py
api/database/: alembic.ini  models.py  utils.py
api/database/alembic/: env.py
api/database/alembic/versions/: 234216994c9f_add_post_creation_date.py  35857e77badf_add_banfields.py  3e289081bbb7_eliminate_replies_column.py  42af85d8a077_add_tags_and_user_info.py  47226b88abf0_post_content_json_column.py  62204a79bc6e_add_ban_expiration_field.py  65d0e1139e55_add_user_validation.py  811412622c96_add_flagged_posts_table.py  8720383a3ce3_initial_migration.py  9145934226c3_fix_notifications_schema.py  aaae56500290_add_moderator_types.py  b5621f79d104_add_password_reset_models.py  cec321266fe1_add_bookmarks.py  d47b81ac12ad_add_post_editing_details.py  dc40d39de679_add_notifications_table.py  ed0115ffeb85_add_likes_table.py  f0e06b4cdd92_add_chat_table.py  fc4e1997563f_add_categories.py
api/mail/: mail_helper.py  send_mail.py
api/mail/templates/: activation.html  resetpass.html
api/middlewares/: auth_middleware.py  background_middleware.py  log_middleware.py
api/resolvers/: auth.py  login.py  oauth.py  refresh.py  save_notification.py
api/resolvers/mutations/: ban_users.py  bookmark_post.py  create_category.py  create_topic.py  create_user.py  flag_post.py  like_post.py  mark_notifications_read.py  mutations.py  post.py  reset_password.py  send_message.py  set_mentions.py  uploads.py  user_mutations.py  validate_user.py
api/resolvers/oauthservices/: facebook.py  github.py  google.py  twitter.py
api/resolvers/queries/: bookmarks.py  categories.py  chats.py  checkUsername.py  config.py  flagged_posts.py  likes.py  mentions.py  notifications.py  post_edits.py  posts.py  queries.py  search.py  topics.py  user.py
api/resolvers/subscriptions/: chats.py  mention.py  subscriptions.py
api/scripts/: add_user.py  config_helper.py  create_database.py  delete_user.py  destroy_database.py  generate_nginx_conf.py  initial_config.py  insert_large_topics.py  insert_posts.py  insert_test_data.py  reset_database.py  run_migrations.py  setup.py
api/scripts/insertdata/: insert_category.py  insert_posts.py  insert_topics.py  insert_user.py
api/utils/: upload_utils.py  utils.py
config/: config.dev.json  config.prod.json  config.test.json
locales/en/: accountSettings.json  banned.json  bookmarks.json  categories.json  category.json  chats.json  editor.json  loading.json  login.json  logout.json  modcp.json  navbar.json  nomatch.json  oauth.json  paginationFooter.json  postLink.json  posts.json  register.json  search.json  topics.json  topicsComposer.json  user.json
locales/es/: accountSettings.json  banned.json  bookmarks.json  categories.json  category.json  chats.json  editor.json  loading.json  login.json  logout.json  modcp.json  navbar.json  nomatch.json  oauth.json  paginationFooter.json  postLink.json  posts.json  register.json  search.json  topics.json  topicsComposer.json  user.json
static/: README.md
static/avatars/: README.md
tests/: MUTATION_LIST.MD  QUERY_LIST.MD  REMAINING_TESTS.MD  SUBSCRIPTION_LIST.MD  TEST_SUBSCRIPTIONS.MD  conftest.py  file_utils.py  helpers.py  test_ban.py  test_bookmarks.py  test_categories.py  test_chats.py  test_config.py  test_database.py  test_flags.py  test_likes.py  test_login.py  test_mention_candidates.py  test_notifications.py  test_password_reset.py  test_post_link.py  test_posts.py  test_search.py  test_settings.py  test_subscriptions.py  test_topics.py  test_uploads.py  test_user.py
