[tool.poetry]
name = "reactive-bb-backend"
version = "0.1.0"
description = ""
authors = ["fdemian <fdemian@gmail.com>"]
readme = "README.md"
packages = [{include = "reactive_bb_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
ariadne = "0.23.0"
alembic = "1.13.2"
psycopg2-binary = "^2.9.9"
pyjwt = "2.9.0"
starlette = "0.38.2"
python-multipart = "0.0.9"
gunicorn = "23.0.0"
rauth = "^0.7.3"
aiohttp = "3.10.5"
aiofiles = "24.1.0"
sqlalchemy-utils = "0.41.2"
websockets = "13.0"
graphql-core = "^3.2.3"
anyio = "4.4.0"
uvicorn = "0.30.6"
pytest = "8.3.2"
pytest-asyncio = "0.24.0"
pytest-cov = "5.0.0"
coverage = "7.6.1"
broadcaster = "0.3.1"
mypy = "1.11.2"
asyncpg = "^0.29.0"
httpx = "0.27.0"
tomli = "^2.0.1"
sqlalchemy = "2.0.32"
supervisor = "^4.2.5"
requests = "2.32.3"
flake8 = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init = "api.scripts.initial_config:main"
adduser = "api.scripts.add_user:main"
deleteuser = "api.scripts.delete_user:main"
createdb = "api.scripts.create_database:main"
destroydb = "api.scripts.destroy_database:main"
resetdb = "api.scripts.reset_database:main"
testdata = "api.scripts.insert_test_data:main"
db_upgrade = "alembic upgrade head:main"
db_downgrade = "alembic downgrade base:main"
generatenginxconf = "api.scripts.generate_nginx_conf:main"