[tool.poetry]
name = "reactive-bb-backend"
version = "0.1.0"
description = ""
authors = ["fdemian <fdemian@gmail.com>"]
readme = "README.md"
packages = [{include = "reactive_bb_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
ariadne = "0.26.2"
alembic = "1.16.5"
psycopg2-binary = "2.9.10"
pyjwt = "2.10.1"
starlette = "0.48.0"
python-multipart = "0.0.9"
gunicorn = "23.0.0"
rauth = "^0.7.3"
aiohttp = "3.11.13"
aiofiles = "24.1.0"
sqlalchemy-utils = "0.42.0"
websockets = "15.0.1"
graphql-core = "3.2.5"
anyio = "4.6.0"
uvicorn = "0.36.0"
pytest = "8.4.2"
pytest-asyncio = "1.2.0"
pytest-cov = "6.2.1"
coverage = "7.10.2"
broadcaster = "0.3.1"
mypy = "1.17.1"
asyncpg = "0.30.0"
httpx = "0.28.1"
tomli = "^2.0.1"
sqlalchemy = "2.0.43"
supervisor = "^4.2.5"
requests = "2.32.3"
flake8 = "^7.1.0"
setuptools = "74.0.0"
aiohappyeyeballs = "2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init = "api.scripts.initial_config:main"
adduser = "api.scripts.add_user:main"
deleteuser = "api.scripts.delete_user:main"
createdb = "api.scripts.create_database:main"
destroydb = "api.scripts.destroy_database:main"
resetdb = "api.scripts.reset_database:main"
testdata = "api.scripts.insert_test_data:main"
db_upgrade = "alembic upgrade head:main"
db_downgrade = "alembic downgrade base:main"
generatenginxconf = "api.scripts.generate_nginx_conf:main"